testsuite/tests/deriving/should_fail/T10598_fail1.stderr

T10598_fail1.hs:9:41: error:
    • Can't make a derived instance of
        ‘Show A’ with the newtype strategy:
        GeneralizedNewtypeDeriving cannot be used on non-newtypes
    • In the data declaration for ‘A’

T10598_fail1.hs:10:41: error:
    • Can't make a derived instance of
        ‘Num B’ with the bespoke strategy:
        ‘Num’ is not a standard derivable class (Eq, Show, etc.)
    • In the newtype declaration for ‘B’

T10598_fail1.hs:11:41: error:
    • Can't make a derived instance of
        ‘Z C’ with the anyclass strategy:
        The last argument of class ‘Z’ does not have kind * or (* -> *)
    • In the data declaration for ‘C’
